# sailing-regates-route-calculator

./: .dockerignore  .env.dev  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  sailingroute.drawio
app/: main.py  requirements.txt
app/api/exceptions/: example.py  middleware.py
app/api/v1/: db.py  routes.py  routes_mesh.py  routing.py  routing_v2.py  view_route.py  weather.py  yacht.py
app/core/: config.py  database.py  yacht_seeder.py
app/models/: models.py
app/schemas/: SailingConditions.py  WeatherMeshConfig.py  db_create.py  mesh.py  meshzones.py  segement.py  time_aware_weather.py  weather.py  yacht.py
app/services/: common.py  logger.py  warsawtz.py
app/services/db/: services.py
app/services/geodata/: bathymetry.py  corridor.py  osm_land.py  trim_water.py
app/services/mesh/: map_data.py  mesh_builder.py  zones.py
app/services/meshing/: triangle_mesher.py
app/services/routing/: diff_calc.py  heuristics.py  heurystic_storage.py  iterative_routing.py  qucik_path.py  segement_optimalizer.py  time_window.py
app/services/weather/: RateLimiter.py  WeatherCache.py  time_aware_weather_service.py  validator.py  weather_api_manager.py
app/test/: conftest.py
app/test/database/: database.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: page.tsx
frontend/components/: LoadingOverlay.tsx  Map.tsx  RouteAnimation.tsx  RouteResults.tsx  SplashScreen.tsx  WindBarb.tsx
